# deca123

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  compose.gpu.yaml  compose.yaml  pyproject.toml  run_scenario.py  start-demo.cmd
analysis/: README.md
assets/: catalog.yaml  source-materials.sha256
config/: architecture.json  toolchain.lock.json
criteria/: ACCEPTANCE_MATRIX.md  CHANGELOG.md  README.md  acceptance-contract.json  acceptance-contract.schema.json  contract.lock.json
datasets/: README.md
docs/: adr-001-geometry-first.md  architecture.md  calculations.md  fail-safe-gates.md  fmea.md  functional-freeze.md  gstack-engineering-review.md  materials-audit.md  official-clarifications.md  reproducibility.md  simulation.md
evidence/: README.md
scenarios/: README.md
scripts/: run-webots.ps1  start-demo.ps1
submission/: README.md
tools/: __init__.py  ablations_suite.py  audit_dataset_split.py  check_architecture.py  check_repo_layout.py  check_statistical_report.py  check_submission.py  compare_mechanics.py  compare_throughput.py  create_presentation.mjs  create_submission_pdfs.py  demonstration_filter.txt  evaluate_geometry.py  evaluate_rescan.py  evaluate_shadow_predictor.py  evaluator_validate.py  gate_trials.py  gates_suite.py  geometry_suite.py  leak_test.py  polish_audit.py  prepare_thingi10k_sample.cjs  release_bundle.py  release_check.py  reliability_suite.py  render_acceptance_matrix.py  replay_decisions.py  scheduling_checks.py  smoke_cycle.py  stress_item_ledger.py  throughput_suite.py  uncertainty_suite.py  (+4 more)
(+78 files in other folders)
