[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ozon-safesort"
version = "0.1.0"
description = "Sensor-only Webots digital sorting cell with isolated evaluation evidence"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {file = "LICENSE"}
dependencies = []

[project.optional-dependencies]
perception = [
  "jsonschema==4.23.0",
  "numpy==2.2.6",
  "open3d==0.19.0",
  "PyYAML==6.0.2",
  "scipy==1.15.3",
]

[dependency-groups]
dev = [
  "jsonschema==4.23.0",
  "mypy==1.16.1",
  "pytest==8.4.1",
  "ruff==0.12.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/safesort"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-config --strict-markers"
pythonpath = [".", "src"]

[tool.ruff]
target-version = "py312"
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["safesort"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = "jsonschema"
ignore_missing_imports = true
